アーカイブパスを修正

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,6 @@ jobs:
           clean test |
           xcbeautify --renderer github-actions
 
-  # Deploy
-  call_deploy:
-    uses: ./.github/workflows/cd.yml
-    secrets: inherit
+      - name: Call deploy workflow
+        uses: ./.github/workflows/cd.yml
+        # secrets: inherit
