”ci後にcdを実行するようにする

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,21 +62,23 @@ jobs:
           -resolvePackageDependencies
 
       # 単体テストの実行
-      - name: Xcode test
-        run: set -o pipefail &&
-          xcodebuild
-          -project "${WORKSPACE_DIR}"
-          -configuration Debug
-          -destination 'platform=iOS Simulator,OS=18.1,name=iPhone 16 Pro'
-          -scheme "${BUILD_SCHEME}"
-          -testPlan "${TEST_PLAN}"
-          -skipPackagePluginValidation
-          -skipMacroValidation
-          -scmProvider xcode
-          -clonedSourcePackagesDirPath SourcePackages
-          clean test |
-          xcbeautify --renderer github-actions
+      # - name: Xcode test
+      #   run: set -o pipefail &&
+      #     xcodebuild
+      #     -project "${WORKSPACE_DIR}"
+      #     -configuration Debug
+      #     -destination 'platform=iOS Simulator,OS=18.1,name=iPhone 16 Pro'
+      #     -scheme "${BUILD_SCHEME}"
+      #     -testPlan "${TEST_PLAN}"
+      #     -skipPackagePluginValidation
+      #     -skipMacroValidation
+      #     -scmProvider xcode
+      #     -clonedSourcePackagesDirPath SourcePackages
+      #     clean test |
+      #     xcbeautify --renderer github-actions
 
-      - name: Call deploy workflow
-        uses: ./.github/workflows/cd.yml
-        # secrets: inherit
+  # Deploy
+  call_deploy:
+    needs: build
+    uses: ./.github/workflows/cd.yml
+    secrets: inherit
