--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -54,60 +54,57 @@ jobs:
       - name: Setup env for api key path
         run: echo "API_KEY_ABSOLUTE_PATH=$(pwd)/$API_KEY_PATH" >> $GITHUB_ENV
 
-      - run: echo $API_KEY_ABSOLUTE_PATH
-      - run: echo $API_KEY_PATH
-
-      - run: xcrun iTMSTransporter -version
+      - run: brew install fastlane
 
       - name: Increment build number
         run: xcrun agvtool new-version -all ${{ github.run_number }}
 
-      # # 依存ライブラリ解決
-      # - name: Xcode Resolve Package Dependencies
-      #   run: set -o pipefail &&
-      #     xcodebuild
-      #     -project "${WORKSPACE_DIR}"
-      #     -scheme "${BUILD_SCHEME}"
-      #     -configuration Release
-      #     -clonedSourcePackagesDirPath SourcePackages
-      #     -skipPackagePluginValidation
-      #     -skipMacroValidation
-      #     -scmProvider xcode
-      #     -resolvePackageDependencies
+      # 依存ライブラリ解決
+      - name: Xcode Resolve Package Dependencies
+        run: set -o pipefail &&
+          xcodebuild
+          -project "${WORKSPACE_DIR}"
+          -scheme "${BUILD_SCHEME}"
+          -configuration Release
+          -clonedSourcePackagesDirPath SourcePackages
+          -skipPackagePluginValidation
+          -skipMacroValidation
+          -scmProvider xcode
+          -resolvePackageDependencies
 
-      # # アーカイブ実行
-      # - name: Archive app
-      #   run: set -o pipefail &&
-      #     xcodebuild
-      #     -clonedSourcePackagesDirPath $SPM_CLONE_PATH
-      #     -configuration Release
-      #     -scheme "${BUILD_SCHEME}"
-      #     -project "${WORKSPACE_DIR}"
-      #     -archivePath "${ARCHIVE_PATH}"
-      #     -authenticationKeyPath "${{ env.API_KEY_ABSOLUTE_PATH }}"
-      #     -authenticationKeyID "${{ secrets.ASC_KEY_ID }}"
-      #     -authenticationKeyIssuerID "${{ secrets.ASC_ISSUER_ID }}"
-      #     -allowProvisioningUpdates
-      #     CODE_SIGNING_REQUIRED=NO
-      #     CODE_SIGNING_ALLOWED=NO
-      #     clean archive
+      # アーカイブ実行
+      - name: Archive app
+        run: set -o pipefail &&
+          xcodebuild
+          -clonedSourcePackagesDirPath $SPM_CLONE_PATH
+          -configuration Release
+          -scheme "${BUILD_SCHEME}"
+          -project "${WORKSPACE_DIR}"
+          -archivePath "${ARCHIVE_PATH}"
+          -authenticationKeyPath "${{ env.API_KEY_ABSOLUTE_PATH }}"
+          -authenticationKeyID "${{ secrets.ASC_KEY_ID }}"
+          -authenticationKeyIssuerID "${{ secrets.ASC_ISSUER_ID }}"
+          -allowProvisioningUpdates
+          CODE_SIGNING_REQUIRED=NO
+          CODE_SIGNING_ALLOWED=NO
+          clean archive
 
-      # # IPAファイルを生成
-      # - name: Create ipa
-      #   run: set -o pipefail &&
-      #     xcodebuild
-      #     -exportArchive
-      #     -archivePath "${ARCHIVE_PATH}"
-      #     -exportPath "${EXPORT_PATH}"
-      #     -authenticationKeyPath "${{ env.API_KEY_ABSOLUTE_PATH }}"
-      #     -authenticationKeyID "${{ secrets.ASC_KEY_ID }}"
-      #     -authenticationKeyIssuerID "${{ secrets.ASC_ISSUER_ID }}"
-      #     -allowProvisioningUpdates
-      #     -exportOptionsPlist "${TEST_FLIGHT_EXPORT_OPTION_PATH}"
+      # IPAファイルを生成
+      - name: Create ipa
+        run: set -o pipefail &&
+          xcodebuild
+          -exportArchive
+          -archivePath "${ARCHIVE_PATH}"
+          -exportPath "${EXPORT_PATH}"
+          -authenticationKeyPath "${{ env.API_KEY_ABSOLUTE_PATH }}"
+          -authenticationKeyID "${{ secrets.ASC_KEY_ID }}"
+          -authenticationKeyIssuerID "${{ secrets.ASC_ISSUER_ID }}"
+          -allowProvisioningUpdates
+          -exportOptionsPlist "${TEST_FLIGHT_EXPORT_OPTION_PATH}"
 
-      # # IPAをApp Store Connectへアップロードする
-      # - name: Upload ipa
-      #   run: |
-      #     chmod -R 777 "${EXPORT_PATH}"
-      #     IPA_PATH=$(find "${EXPORT_PATH}" -name "*.ipa" -print -quit)
-      #     scripts/upload_ipa.sh "$IPA_PATH" "${{ secrets.ASC_KEY_ID }}" "${{ secrets.ASC_ISSUER_ID }}" "${{ secrets.APP_ID }}"
+      # IPAをApp Store Connectへアップロードする
+      - name: Upload ipa
+        run: |
+          chmod -R 777 "${EXPORT_PATH}"
+          IPA_PATH=$(find "${EXPORT_PATH}" -name "*.ipa" -print -quit)
+          fastlane upload_testFlight asc_key_id:"${{ secrets.ASC_KEY_ID }}" asc_issuer_id:"${{ secrets.ASC_ISSUER_ID }}" asc_key_path:"$API_KEY_PATH" ipa:"$IPA_PATH"
