--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -60,9 +60,9 @@ jobs:
         uses: actions/cache@v4.2.2
         with:
           path: vendor/bundle
-          key: ${{ runner.os }}-gem-${{ hashFiles('**/Gemfile.lock') }}
+          key: ${{ runner.os }}-gem-${{ hashFiles('Gemfile.lock') }}
           restore-keys: |
-            ${{ runner.os }}-gem-${{ hashFiles('**/Gemfile.lock') }}
+            ${{ runner.os }}-gem-${{ hashFiles('Gemfile.lock') }}
 
       # Bundleの依存ライブラリインストール
       - run: bundle install
