workflowの内容を修正

--- a/.github/workflows/cd_release.yml
+++ b/.github/workflows/cd_release.yml
@@ -11,7 +11,6 @@ env:
   DEVELOPER_DIR: /Applications/Xcode_16.2.app
   WORKSPACE_DIR: homete.xcodeproj
   BUILD_SCHEME: homete
-  TEST_FLIGHT_EXPORT_OPTION_PATH: deploy/config/ExportOptions_TestFlight.plist
   RELEASE_EXPORT_OPTION_PATH: deploy/config/ExportOptions_Release.plist
   ARCHIVE_PATH: Build/homete.xcarchive
   EXPORT_PATH: Build/app
@@ -124,11 +123,28 @@ jobs:
           -authenticationKeyID "${{ secrets.ASC_KEY_ID }}"
           -authenticationKeyIssuerID "${{ secrets.ASC_ISSUER_ID }}"
           -allowProvisioningUpdates
-          -exportOptionsPlist "${TEST_FLIGHT_EXPORT_OPTION_PATH}"
+          -exportOptionsPlist "${RELEASE_EXPORT_OPTION_PATH}"
 
       # IPAをApp Store Connectへアップロードする
       - name: Upload ipa
         run: |
           chmod -R 777 "${EXPORT_PATH}"
           IPA_PATH=$(find "${EXPORT_PATH}" -name "*.ipa" -print -quit)
-          fastlane upload_testFlight asc_key_id:"${{ secrets.ASC_KEY_ID }}" asc_issuer_id:"${{ secrets.ASC_ISSUER_ID }}" asc_key_path:"$API_KEY_PATH" ipa:"$IPA_PATH"
+          fastlane release asc_key_id:"${{ secrets.ASC_KEY_ID }}" asc_issuer_id:"${{ secrets.ASC_ISSUER_ID }}" asc_key_path:"$API_KEY_PATH" ipa:"$IPA_PATH"
+
+      # 追加: バージョン取得
+      - name: Get app version from archive
+        id: get_version
+        run: |
+          VERSION=$(/usr/libexec/PlistBuddy -c "Print :ApplicationProperties:CFBundleShortVersionString" "${ARCHIVE_PATH}/Info.plist")
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+
+      # 追加: git tag作成＆push（強制上書き）
+      - name: Push git tag
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          TAG_NAME="v${{ steps.get_version.outputs.VERSION }}"
+          git tag -f "$TAG_NAME"
+          git push -f origin "$TAG_NAME"
