--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - "main"
+      - "release/*"
   pull_request:
     branches:
       - "*"
@@ -80,9 +81,16 @@ jobs:
           clean test |
           xcbeautify --renderer github-actions
 
-  # Deploy
+  # Deploy(TestFlight)
   call_deploy:
     if: github.repository == 'main'
     needs: build
     uses: ./.github/workflows/cd.yml
+    secrets: inherit
+
+  # Deploy(Release)
+  call_deploy_release:
+    if: github.repository == 'release/*'
+    needs: build
+    uses: ./.github/workflows/cd_release.yml
     secrets: inherit
