--- a/.github/workflows/cd_release.yml
+++ b/.github/workflows/cd_release.yml
@@ -130,4 +130,10 @@ jobs:
         run: |
           chmod -R 777 "${EXPORT_PATH}"
           IPA_PATH=$(find "${EXPORT_PATH}" -name "*.ipa" -print -quit)
-          fastlane release asc_key_id:"${{ secrets.ASC_KEY_ID }}" asc_issuer_id:"${{ secrets.ASC_ISSUER_ID }}" asc_key_path:"$API_KEY_PATH" ipa:"$IPA_PATH"
+          VERSION=$(/usr/libexec/PlistBuddy -c "Print :ApplicationProperties:CFBundleShortVersionString" "${ARCHIVE_PATH}/Info.plist")
+          fastlane release \
+            asc_key_id:"${{ secrets.ASC_KEY_ID }}" \
+            asc_issuer_id:"${{ secrets.ASC_ISSUER_ID }}" \
+            asc_key_path:"$API_KEY_PATH" \
+            ipa:"$IPA_PATH" \
+            app_version:"$VERSION"
