--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,33 +53,33 @@ jobs:
         run: xcodebuild -version
 
       # ビルド
-      # - name: Xcode Resolve Package Dependencies
-      #   run: set -o pipefail &&
-      #     xcodebuild
-      #     -project "${WORKSPACE_DIR}"
-      #     -scheme "${BUILD_SCHEME}"
-      #     -configuration Debug
-      #     -clonedSourcePackagesDirPath SourcePackages
-      #     -skipPackagePluginValidation
-      #     -skipMacroValidation
-      #     -scmProvider xcode
-      #     -resolvePackageDependencies
+      - name: Xcode Resolve Package Dependencies
+        run: set -o pipefail &&
+          xcodebuild
+          -project "${WORKSPACE_DIR}"
+          -scheme "${BUILD_SCHEME}"
+          -configuration Debug
+          -clonedSourcePackagesDirPath SourcePackages
+          -skipPackagePluginValidation
+          -skipMacroValidation
+          -scmProvider xcode
+          -resolvePackageDependencies
 
-      # # 単体テストの実行
-      # - name: Xcode test
-      #   run: set -o pipefail &&
-      #     xcodebuild
-      #     -project "${WORKSPACE_DIR}"
-      #     -configuration Debug
-      #     -destination 'platform=iOS Simulator,OS=18.1,name=iPhone 16 Pro'
-      #     -scheme "${BUILD_SCHEME}"
-      #     -testPlan "${TEST_PLAN}"
-      #     -skipPackagePluginValidation
-      #     -skipMacroValidation
-      #     -scmProvider xcode
-      #     -clonedSourcePackagesDirPath SourcePackages
-      #     clean test |
-      #     xcbeautify --renderer github-actions
+      # 単体テストの実行
+      - name: Xcode test
+        run: set -o pipefail &&
+          xcodebuild
+          -project "${WORKSPACE_DIR}"
+          -configuration Debug
+          -destination 'platform=iOS Simulator,OS=18.1,name=iPhone 16 Pro'
+          -scheme "${BUILD_SCHEME}"
+          -testPlan "${TEST_PLAN}"
+          -skipPackagePluginValidation
+          -skipMacroValidation
+          -scmProvider xcode
+          -clonedSourcePackagesDirPath SourcePackages
+          clean test |
+          xcbeautify --renderer github-actions
 
   # Deploy(TestFlight)
   call_deploy:
@@ -90,7 +90,7 @@ jobs:
 
   # Deploy(Release)
   call_deploy_release:
-    # if: github.repository == 'release/*'
+    if: github.repository == 'release/*'
     needs: build
     uses: ./.github/workflows/cd_release.yml
     secrets: inherit
