ASC APIキーでアーカイブ時の署名を行うよう修正2

--- a/.github/workflows/cd_testFlight.yml
+++ b/.github/workflows/cd_testFlight.yml
@@ -108,6 +108,7 @@ jobs:
           -authenticationKeyPath "${{ env.API_KEY_ABSOLUTE_PATH }}"
           -authenticationKeyID "${{ secrets.ASC_KEY_ID }}"
           -authenticationKeyIssuerID "${{ secrets.ASC_ISSUER_ID }}"
+          -allowProvisioningUpdates
 
       # IPAファイルを生成
       - name: Create ipa
