アーカイブ時の署名はスキップする

--- a/.github/workflows/cd_testFlight.yml
+++ b/.github/workflows/cd_testFlight.yml
@@ -104,10 +104,8 @@ jobs:
           -scheme "${BUILD_SCHEME}"
           -project "${WORKSPACE_DIR}"
           -archivePath "${ARCHIVE_PATH}"
-          -authenticationKeyPath "${{ env.API_KEY_ABSOLUTE_PATH }}"
-          -authenticationKeyID "${{ secrets.ASC_KEY_ID }}"
-          -authenticationKeyIssuerID "${{ secrets.ASC_ISSUER_ID }}"
-          -allowProvisioningUpdates
+          CODE_SIGNING_REQUIRED=NO
+          CODE_SIGNING_ALLOWED=NO
 
       # IPAファイルを生成
       - name: Create ipa
