--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,8 @@ fastlane/test_output
 # secret
 
 private_keys/
-GoogleService-Info*.plist
+GoogleService-Info.plist
+GoogleService-Info-dev.plist
 
 # other
 
