update: デプロイワークローの発火条件を修正

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,14 +95,14 @@ jobs:
 
   # Deploy(TestFlight)
   call_deploy:
-    if: github.repository == 'main'
+    if: github.ref_name == 'main'
     needs: build
     uses: ./.github/workflows/cd_testFlight.yml
     secrets: inherit
 
   # Deploy(Release)
   call_deploy_release:
-    if: github.repository == 'release/*'
+    if: github.ref_name == 'release/*'
     needs: build
     uses: ./.github/workflows/cd_release.yml
     secrets: inherit
