update: debug用にDistributionSummary.plistの表示処理の追加

--- a/.github/workflows/cd_testFlight.yml
+++ b/.github/workflows/cd_testFlight.yml
@@ -128,6 +128,7 @@ jobs:
         run: |
           chmod -R 777 "${EXPORT_PATH}"
           IPA_PATH=$(find "${EXPORT_PATH}" -name "*.ipa" -print -quit)
+          cat Build/app/DistributionSummary.plist
           fastlane upload_testFlight \
             asc_key_id:"${{ secrets.ASC_KEY_ID }}" \
             asc_issuer_id:"${{ secrets.ASC_ISSUER_ID }}" \
