--- a/.github/workflows/cd_testFlight.yml
+++ b/.github/workflows/cd_testFlight.yml
@@ -84,48 +84,16 @@ jobs:
       # ビルド番号更新
       - name: Increment build number
         run: xcrun agvtool new-version -all ${{ github.run_number }}
+          
+      # IPAをApp Store Connectへアップロードする
+      - name: Upload ipa for TestFlight
+        run: fastlane upload_testFlight export_options_path:"${TEST_FLIGHT_EXPORT_OPTION_PATH}"
+        env:
+          ASC_KEY_ID: ${{ secrets.ASC_KEY_ID }}
+          ASC_ISSUER_ID: ${{ secrets.ASC_ISSUER_ID }}
 
-      # アーカイブ実行
-      - name: Archive app
-        run: set -o pipefail &&
-          xcodebuild clean archive
-          -clonedSourcePackagesDirPath "${SPM_CLONE_PATH}"
-          -configuration Release
-          -scheme "${BUILD_SCHEME}"
-          -project "${WORKSPACE_DIR}"
-          -destination "generic/platform=iOS"
-          -archivePath "${ARCHIVE_PATH}"
-          -authenticationKeyPath "${{ env.API_KEY_ABSOLUTE_PATH }}"
-          -authenticationKeyID "${{ secrets.ASC_KEY_ID }}"
-          -authenticationKeyIssuerID "${{ secrets.ASC_ISSUER_ID }}"
-          -allowProvisioningUpdates
-
-      # IPAファイルを生成
-      - name: Create ipa
-        run: set -o pipefail &&
-          xcodebuild
-          -exportArchive
-          -archivePath "${ARCHIVE_PATH}"
-          -exportPath "${EXPORT_PATH}"
-          -authenticationKeyPath "${{ env.API_KEY_ABSOLUTE_PATH }}"
-          -authenticationKeyID "${{ secrets.ASC_KEY_ID }}"
-          -authenticationKeyIssuerID "${{ secrets.ASC_ISSUER_ID }}"
-          -allowProvisioningUpdates
-          -exportOptionsPlist "${TEST_FLIGHT_EXPORT_OPTION_PATH}"
-
+      # ipaをワークフローのアーティファクトとしてアップロード
       - uses: actions/upload-artifact@v4
         with:
           name: build-artifact
           path: Build/
-
-      # IPAをApp Store Connectへアップロードする
-      - name: Upload ipa
-        run: |
-          chmod -R 777 "${EXPORT_PATH}"
-          IPA_PATH=$(find "${EXPORT_PATH}" -name "*.ipa" -print -quit)
-          cat Build/app/DistributionSummary.plist
-          fastlane upload_testFlight \
-            asc_key_id:"${{ secrets.ASC_KEY_ID }}" \
-            asc_issuer_id:"${{ secrets.ASC_ISSUER_ID }}" \
-            asc_key_path:"$API_KEY_PATH" \
-            ipa:"$IPA_PATH"
