--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,8 @@ env:
   TEST_PLAN: homete
   SPM_CLONE_PATH: SourcePackages
   SPM_PACKAGE_RESOLVED_FILE_PATH: homete.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved
+  PROJECT_TOOLS_SPM_PACKAGE_RESOLVED_FILE_PATH: ProjectTools/Package.resolved
+  TEST_OUTPUT_PATH: Build/test.xcresult
 
 jobs:
   build:
@@ -55,7 +57,15 @@ jobs:
         run: xcodebuild -version
 
       # SPMのライブラリのキャッシュ
-      - name: Cache Swift Packages
+      - name: Cache Swift Packages For ProjectTools
+        uses: actions/cache@v4.2.2
+        with:
+          path: ProjectTools/.build
+          key: v1-project-tools-${{ runner.os }}-spm-${{ hashFiles(env.PROJECT_TOOLS_SPM_PACKAGE_RESOLVED_FILE_PATH) }}
+          restore-keys: v1-project-tools-${{ runner.os }}-spm-
+
+      # SPMのライブラリのキャッシュ
+      - name: Cache Swift Packages For Project
         uses: actions/cache@v4.2.2
         with:
           path: SourcePackages
@@ -90,8 +100,15 @@ jobs:
           -skipMacroValidation
           -scmProvider xcode
           -clonedSourcePackagesDirPath "${SPM_CLONE_PATH}"
+          -resultBundlePath "${TEST_OUTPUT_PATH}"
           clean test |
           xcbeautify --renderer github-actions
+
+      - name: Static Analyze with Danger
+        run: swift run danger-swift ci --cwd ../
+        working-directory: ProjectTools
+        env:
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   # Deploy(TestFlight)
   call_deploy:
