--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -42,6 +42,7 @@ disabled_rules:
   - switch_case_on_newline
   - type_contents_order
   - statement_position
+  - identifier_name
 
 # Configurations
 trailing_whitespace:
