--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ on:
 
 env:
   # チェックアウト
-  DEVELOPER_DIR: /Applications/Xcode_16.2.app
+  DEVELOPER_DIR: /Applications/Xcode_16.4.app
   WORKSPACE_DIR: homete.xcodeproj
   BUILD_SCHEME: homete
   TEST_PLAN: homete
@@ -31,7 +31,7 @@ env:
 jobs:
   build:
     # 実行環境はmacosに設定
-    runs-on: macos-latest
+    runs-on: macos-15
 
     steps:
       # fetch-depth の計算
@@ -93,7 +93,7 @@ jobs:
           xcodebuild
           -project "${WORKSPACE_DIR}"
           -configuration Debug
-          -destination 'platform=iOS Simulator,OS=18.1,name=iPhone 16 Pro'
+          -destination 'platform=iOS Simulator,OS=18.4,name=iPhone 16 Pro'
           -scheme "${BUILD_SCHEME}"
           -testPlan "${TEST_PLAN}"
           -skipPackagePluginValidation
