--- a/.github/workflows/cd_testFlight.yml
+++ b/.github/workflows/cd_testFlight.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   # チェックアウト
-  DEVELOPER_DIR: /Applications/Xcode_16.2.app
+  DEVELOPER_DIR: /Applications/Xcode_16.4.app
   WORKSPACE_DIR: homete.xcodeproj
   BUILD_SCHEME: homete
   TEST_FLIGHT_EXPORT_OPTION_PATH: deploy/config/ExportOptions_TestFlight.plist
@@ -20,7 +20,7 @@ env:
 jobs:
   deploy_testFlight:
     # 実行環境はmacosに設定
-    runs-on: macos-latest
+    runs-on: macos-15
     env:
       API_KEY_PATH: "private_keys/AuthKey_${{ secrets.ASC_KEY_ID }}.p8"
 
@@ -84,7 +84,7 @@ jobs:
       # ビルド番号更新
       - name: Increment build number
         run: xcrun agvtool new-version -all ${{ github.run_number }}
-          
+
       # IPAをApp Store Connectへアップロードする
       - name: Upload ipa for TestFlight
         run: fastlane upload_testFlight
