--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Cache Swift Packages For Project
         uses: actions/cache@v4.2.2
         with:
-          path: SourcePackages
+          path: ${{ env.SPM_CLONE_PATH }}
           key: v1-dev-${{ runner.os }}-spm-${{ hashFiles(env.SPM_PACKAGE_RESOLVED_FILE_PATH) }}
           restore-keys: v1-dev-${{ runner.os }}-spm-
 
