--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
       - name: Show Xcode version
         run: xcodebuild -version
 
+      # iOS SDKのインストール
       - name: Install ios sdk
         run: xcodebuild -downloadPlatform iOS
 
